--- a/src/app/public-module/landing-page-component/landing-page-component.component.html
+++ b/src/app/public-module/landing-page-component/landing-page-component.component.html
@@ -1,4 +1,76 @@
-<div class="blackBoard flex flex-column" style="height:100vh">
+<nav class="navbar navbar-expand-lg bg-success bg-gradient">
+    <div class="container-fluid">
+        <h1 class="me-auto">
+            <a class="navbar-brand text-white h1" href="#">
+                <img src="../../../assets/logo-alone.png" alt="Inote logo" class="w-25 ">
+                Inote
+            </a>
+        </h1>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active text-white" aria-current="page" href="#">Se connecter</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<section id="landing" class="bg-success bg-gradient d-flex align-items-center ">
+    <div class="container">
+        <div class="row ">
+            <div class="col-lg-6 d-flex flex-column order-lg-1 order-2 text-center text-lg-start "  data-aos="fade-up" data-aos-delay="200">
+                <h1 class=" mb-2 mt-2 ">Notez...Où que vous soyez</h1>
+                <h2 class="text-body-tertiary">Inote offre une solution déportée avec laquelle vous pouvez à tout
+                    moment retrouver vos notes à l'aide d'une simple connexion</h2>
+                <h3><a href="" class="btn btn-secondary  mt-3 ms-auto me-auto rounded-4">Inscription rapide</a></h3>
+            </div>
+            <div class="col-lg-6 justify-content-center text-center order-lg-2 " data-aos="zoom-in" data-aos-delay="200">
+                <img src="../../../assets/logo.png" alt="Inote logo" class="w-50 inote_logo_animation">
+                <h1 class="fs-1 text-white">Inote</h1>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div class="blackBoard flex flex-column" style="height:100vh">
 
     <div class="d-flex flex-row  justify-content-center ">
         <div class="col-4 "></div>
@@ -17,16 +89,7 @@
                 <button class="ms-1 btn btn-success border border-white align-self-start"> Se déconnecter</button>
 
             </div>
-            <!-- <div class="col-4 d-flex flex-row align-self-start justify-content-center mt-3 border border-blue">
-                <button (click)="goToLoginPage()" class="me-1 btn btn-success border border-white"> Se connecter</button>
-                <button class="ms-1 btn btn-success border border-white"> Se Déconnecter</button>
-                <!-- <div class=" mt-4 d-flex flex-column  ms-auto">
-                    <button (click)="goToLoginPage()" class="btn btn-success border border-white"> Se connecter</button>
-                    
-                </div>
-                <div class=" ms-2 mt-4 d-flex flex-column justify-content-start">
-                    <button class="btn btn-success border border-white"> Se Déconnecter</button>
-                </div> -->
+           
 
         </div>
 
@@ -41,4 +104,4 @@
             <div class="bg-success border border-white rounded-end text-white ps-3 pe-3">Créer un compte</div>
         </div>
     </div>
-</div>
+</div> -->
