--- a/src/app/shared-module/footer-component/footer-component.component.html
+++ b/src/app/shared-module/footer-component/footer-component.component.html
@@ -1,4 +1,29 @@
-<div class="fixed-bottom d-flex flex row bg-body-tertiary">
+<footer>
+    <div class="container-fluid bg-body-tertiary ">
+        <div class="row">
+            <div class="col-md-6 ">
+                <h3>Sections du site</h3>
+                <ul style="list-style-type: none;" >
+                    <li><i class="bx bx-chevron-right"></i> <a href="#" class="text-decoration-none text-black-50 ">Contact</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#" class="text-decoration-none text-black-50">Mentions légales</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#" class="text-decoration-none text-black-50">Politique de confidentialité</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#" class="text-decoration-none text-black-50">Cookies</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-4 col-md-6 justify-content-around ">
+                <h4>Suivez-nous sur les réseaux sociaux</h4>
+                <div class="mt-3">
+                    <a href="#" class="linkedin"><i class="bx bxl-linkedin text-black-50"></i></a>
+                    <a href="#" class="twitter"><i class="bx bxl-twitter text-black-50"></i></a>
+                    <a href="#" class="instagram"><i class="bx bxl-instagram text-black-50"></i></a>
+                    <a href="#" class="facebook"><i class="bx bxl-facebook text-black-50"></i></a>
+                  </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<!-- <div class=" d-flex flex row bg-body-tertiary">
     <hr style="width: 50%;
     border-style: solid;
     border-color: white;
@@ -26,10 +51,9 @@
                             style="width:2rem;;"></a>
                     <a href="https://www.twitter.com"><img src="../../../assets/x.svg" alt="logo x"
                             style="width:2rem;;"></a>
-                    <!-- <a href="https://www.twitter.com"><img src="../../../assets/x.svg" alt="logo x"
-                            style="width:2rem;filter: invert(100%);"></a> -->
+                   
                 </div>
             </div>
         </div>
     </div>
-</div>
+</div> -->
