--- a/src/app/public-module/register-form-component/register-form-component.component.html
+++ b/src/app/public-module/register-form-component/register-form-component.component.html
@@ -33,11 +33,17 @@
             pattern="[a-zA-Z0-9!@#$%^&*_=+-]{8,12}" [(ngModel)]="this.password" name="password" #pwdA="ngModel">
     </div>
     <div class="d-flex flex-grow-0 justify-content-center">
-        <button 
-            type="submit" 
-            class=" mt-2 btn btn-secondary ms-lg-auto border border-white"
-            [disabled]="!registerForm.form.valid">
+        <button type="submit" class=" mt-2 btn btn-secondary ms-lg-auto border border-white"
+            [disabled]="!registerForm.form.valid" [hidden]="this.registering_success">
             Continuer
         </button>
     </div>
+    <div [ngSwitch]="this.statusAfterRequest" class="mt-4 ">
+        <div *ngSwitchCase=201 class="text-white">{{this.msgAfterRequest}}</div>
+        <div *ngSwitchDefault class="text-danger">{{this.msgAfterRequest}}</div>
+    </div>
+    <button type="button" (click)="goToHome()" class=" mt-2 btn btn-secondary ms-lg-auto border border-white"
+        [hidden]="!this.registering_success">
+        Revenir à l'accueil
+    </button>
 </form>
