--- a/src/app/public-module/login-component/login-component.component.html
+++ b/src/app/public-module/login-component/login-component.component.html
@@ -1,5 +1,5 @@
 
-<!-- <div class="blackBoard d-flex justify-content-center align-items-center" style="height:100vh">
+ <!-- <div class="blackBoard d-flex justify-content-center align-items-center" style="height:100vh">
     <div class="col-4"></div>
     <div class="card w-25 text-center">
         <div class="card-header">
@@ -29,3 +29,14 @@
         </div>
     </div>
 </div> -->
+
+<section id="page_without_nav" class="d-flex align-items-center text-center text-white bg-success">
+    <div class="container ">
+        <div class="row row-cols-1 row-cols-lg-2 align-items-center">
+            <div class="col display-6 h1"><h1>Connexion</h1></div>
+            <div class="col p-3 ">
+                
+            </div>
+        </div>
+    </div>
+</section>
