connexion with bearer Ok

--- a/src/app/public-module/login-form-component/login-form-component.component.html
+++ b/src/app/public-module/login-form-component/login-form-component.component.html
@@ -78,7 +78,7 @@
       Se connecter
     </button>
   </div>
-  <div *ngIf="this.statusAfterRequest != '200'" class="mt-4">
+  <div *ngIf="this.statusAfterRequest != '200'" class="mt-4 text-danger" >
     {{ this.msgAfterRequest }}
   </div>
 </form>
