--- a/src/app/protected-module/shared-protected-module/protected-nav-component/protected-nav-component.component.html
+++ b/src/app/protected-module/shared-protected-module/protected-nav-component/protected-nav-component.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+<!-- <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="/users">
         <img src="../assets/logo-no-background.svg" alt="logo Inote" style="width:5rem">
@@ -27,6 +27,57 @@
         <a href="">
           <img src="../assets/admin.png" alt="user profile img" class="img-fluid rounded-circle ms-5 me-2 border border border-secondary-subtle" style="object-fit: cover; object-position: center ;width: 3rem; height: 3rem;">
         </a>
+
       </div>
     </div>
-  </nav>
+  </nav> -->
+
+  
+
+<nav class="navbar navbar-expand-lg bg-success bg-gradient">
+  <div class="container-fluid">
+    <h1 class="me-auto">
+      <a class="navbar-brand text-white h1" href="#">
+        <img
+          src="../../../assets/logo-alone.png"
+          alt="Inote logo"
+          class="w-25"
+        />
+        Inote
+      </a>
+    </h1>
+
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav ">
+        <li class="nav-item">
+          <a [routerLink]="['/login']" class=" nav-link text-white">Mes Boards</a>
+        </li>
+        <li class="nav-item">
+          <a [routerLink]="['/login']" class=" nav-link text-white">Mes Teams</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-danger" href="#">Admin</a>
+        </li>
+      </ul>
+      <form class="d-flex align-items-center offset-3" role="search">
+        <input class="form-control me-2" type="search" placeholder="Note,boards,utilisateur..." aria-label="Search"
+          style="font-style:italic">
+        <button class="btn" type="submit" class="btn btn-secondary ms-lg-auto border border-white">Rechercher</button>
+      </form>
+      <a href="">
+        <img src="../assets/admin.png" alt="user profile img" class="img-fluid rounded-circle ms-5 me-2 border border border-secondary-subtle" style="object-fit: cover; object-position: center ;width: 3rem; height: 3rem;">
+      </a>
+    </div>
+  </div>
+</nav>
