--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
-#page{
-    
+.inoteNavLink{
+    text-decoration: none;
+    color: white;
 }
+
+#fullPageHeight_withNavBar{
+    height: 90vh;
+    width: 100%;
+  }
