get current user for navBar in progress

--- a/src/app/protected-module/shared-protected-module/protected-nav-component/protected-nav-component.component.html
+++ b/src/app/protected-module/shared-protected-module/protected-nav-component/protected-nav-component.component.html
@@ -13,8 +13,8 @@
         <img src="../assets/admin.png" alt="user profile img" class="img-fluid rounded-circle  border border border-secondary-subtle" style="object-fit: cover; object-position: center ;width: 3rem; height: 3rem;">
       </a>
       <ul class="dropdown-menu dropdown-menu-end">
-        <div class="ms-1 me-1 fw-bold " style="text-align: end;">Obelix</div>
-        <div class="ms-1 me-1 text-success fw-bold  fs-6 fst-italic " style="text-align: end;">obelix&commat;toutatis.com</div>
+        <div  class="ms-1 me-1 fw-bold " style="text-align: end;">{{this.publicUserDto.pseudo}}</div>
+        <div  class="ms-1 me-1 text-success fw-bold  fs-6 fst-italic " style="text-align: end;">{{this.publicUserDto.username}}</div>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="#" style="text-align: end;">Gestion profil</a></li>
         <li><hr class="dropdown-divider"></li>
