--- a/src/app/public-module/landing-page-component/landing-page-component.component.html
+++ b/src/app/public-module/landing-page-component/landing-page-component.component.html
@@ -6,7 +6,7 @@
                 <h1 class=" mb-2 mt-2 ">Notez...Où que vous soyez</h1>
                 <h2 class="text-body-tertiary">Inote offre une solution déportée avec laquelle vous pouvez à tout
                     moment retrouver vos notes à l'aide d'une simple connexion</h2>
-                <h3><a (click)="goToSubscribePage()" class="btn btn-secondary  mt-3 ms-auto me-auto rounded-4">Inscription rapide</a></h3>
+                <h3><a (click)="goToSubscribePage()" (keydown)="onKeyDown()" tabindex="1" class="btn btn-secondary  mt-3 ms-auto me-auto rounded-4">Inscription rapide</a></h3>
             </div>
             <div class="col-lg-6 justify-content-center text-center order-lg-2 " data-aos="zoom-in" data-aos-delay="200">
                 <img src="../../../assets/logo.png" alt="Inote logo" class="w-50 inote_logo_animation">
