--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,20 +3,20 @@
         <div class="row">
             <div class="col-md-6 ">
                 <h3>Sections du site</h3>
-                <ul style="list-style-type: none;" >
-                    <li><i class="bx bx-chevron-right"></i> <a href="#" class="text-decoration-none text-black-50 ">Contact</a></li>
-                    <li><i class="bx bx-chevron-right"></i> <a href="#" class="text-decoration-none text-black-50">Mentions légales</a></li>
-                    <li><i class="bx bx-chevron-right"></i> <a href="#" class="text-decoration-none text-black-50">Politique de confidentialité</a></li>
-                    <li><i class="bx bx-chevron-right"></i> <a href="#" class="text-decoration-none text-black-50">Cookies</a></li>
+                <ul>
+                    <li><em class="bx bx-chevron-right"></em> <a href="#" class="text-decoration-none text-black-50 ">Contact</a></li>
+                    <li><em class="bx bx-chevron-right"></em> <a href="#" class="text-decoration-none text-black-50">Mentions légales</a></li>
+                    <li><em class="bx bx-chevron-right"></em> <a href="#" class="text-decoration-none text-black-50">Politique de confidentialité</a></li>
+                    <li><em class="bx bx-chevron-right"></em> <a href="#" class="text-decoration-none text-black-50">Cookies</a></li>
                 </ul>
             </div>
             <div class="col-lg-4 col-md-6 justify-content-around ">
                 <h4>Suivez-nous sur les réseaux sociaux</h4>
                 <div class="mt-3">
-                    <a href="#" class="linkedin"><i class="bx bxl-linkedin text-black-50"></i></a>
-                    <a href="#" class="twitter"><i class="bx bxl-twitter text-black-50"></i></a>
-                    <a href="#" class="instagram"><i class="bx bxl-instagram text-black-50"></i></a>
-                    <a href="#" class="facebook"><i class="bx bxl-facebook text-black-50"></i></a>
+                    <a href="#" class="linkedin"><em class="bx bxl-linkedin text-black-50"></em></a>
+                    <a href="#" class="twitter"><em class="bx bxl-twitter text-black-50"></em></a>
+                    <a href="#" class="instagram"><em class="bx bxl-instagram text-black-50"></em></a>
+                    <a href="#" class="facebook"><em class="bx bxl-facebook text-black-50"></em></a>
                   </div>
             </div>
         </div>
