fix http response for plain text

--- a/src/app/public-module/shared-public-module/public-nav-bar/public-nav-bar.component.html
+++ b/src/app/public-module/shared-public-module/public-nav-bar/public-nav-bar.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <h1 class="me-auto">
             <a class="navbar-brand text-white h1" href="#">
-                <img src="../../../assets/logo-alone.png" alt="Inote logo" class="w-25 ">
+                <img src="../../../assets/logo.svg" alt="Inote logo" class="w-25">
                 Inote
             </a>
         </h1>
