--- a/src/app/public-module/landing-page/landing-page.component.html
+++ b/src/app/public-module/landing-page/landing-page.component.html
@@ -9,7 +9,7 @@
                 <h3><a (click)="goToSubscribePage()" class="btn btn-secondary  mt-3 ms-auto me-auto rounded-4">Inscription rapide</a></h3>
             </div>
             <div class="col-lg-6 justify-content-center text-center order-lg-2 " data-aos="zoom-in" data-aos-delay="200">
-                <img src="../../../assets/logo.png" alt="Inote logo" class="w-50 inote_logo_animation">
+                <img src="../../../assets/logo.svg" alt="Inote logo" class="w-50 inote_logo_animation">
                 <h1 class="fs-1 text-white">Inote</h1>
             </div>
         </div>
