fix password input type to 'password'

--- a/src/app/public-module/register-form/register-form.component.html
+++ b/src/app/public-module/register-form/register-form.component.html
@@ -61,7 +61,7 @@
   <div class="input-group input-group-sm mb-3 mx-auto">
     <span class="input-group-text" id="inputGroup-sizing-sm">Mot de Passe</span>
     <input
-      type="text"
+      type="password"
       class="form-control"
       id="pwd"
       aria-describedby="inputGroup-sizing-sm"
