--- a/src/app/public-module/login-form/login-form.component.html
+++ b/src/app/public-module/login-form/login-form.component.html
@@ -1,34 +1,3 @@
-<!-- <div class="d-flex justify-content-center align-items-center" style="height:100vh">
-    <div class="col-4"></div>
-    <div class="card w-25 text-center">
-        <div class="card-header">
-            <strong>Authentification</strong>
-        </div>
-        <div class="card-body">
-            <p><em>{{message}}</em></p>
-            <form #loginForm="ngForm">
-                <div class="d-flex justify-content-start align-items-center">
-                    <input type="text" id="name" [(ngModel)]="name" name="name" required class="form-control"
-                        placeholder="Nom d'utilisateur" autofocus>
-                </div>
-                <div class="d-flex justify-content-start align-items-center mt-3">
-                    <input type="password" id="password" [(ngModel)]="password" name="password" required
-                        class="form-control" placeholder="Mot de passe">
-                </div>
-            </form>
-            <a (click)="login()" class="btn btn-success mt-2" *ngIf="!auth.isLoggedIn">
-                Se connecter
-            </a>
-            <a (click)="logout()" *ngIf="auth.isLoggedIn" class="btn btn-success mt-2">Se déconnecter</a>
-        </div>
-    </div>
-    <div class="col-4 ">
-        <div class="d-flex justify-content-start ms-3">
-           
-        </div>
-    </div>
-</div> -->
-
 <form (ngSubmit)="OnSubmit()" #loginForm="ngForm">
   <div [hidden]="!ref_email.pristine" id="email-pristine">RAS</div>
   <div [hidden]="!ref_email.valid" id="email-valide">RAS</div>
@@ -59,7 +28,7 @@
   <div class="input-group input-group-sm mb-3 mx-auto">
     <span class="input-group-text" id="inputGroup-sizing-sm">Mot de passe</span>
     <input
-      type="text"
+      type="password"
       class="form-control"
       id="pwd"
       aria-describedby="inputGroup-sizing-sm"
