Updating login form in progress

--- a/src/app/protected-module/shared-protected-module/protected-nav/protected-nav.component.html
+++ b/src/app/protected-module/shared-protected-module/protected-nav/protected-nav.component.html
@@ -23,7 +23,7 @@
         <li>
           <hr class="dropdown-divider">
         </li>
-        <li><a class="dropdown-item" (click)="onSignOut()">Déconnexion</a></li>
+        <li><a class="dropdown-item" href="" (click)="onSignOut()">Déconnexion</a></li>
       </ul>
     </div>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
