--- a/src/app/public-module/login-form/login-form.component.html
+++ b/src/app/public-module/login-form/login-form.component.html
@@ -1,7 +1,9 @@
+<!-- LOGIN FORM -->
 <form (ngSubmit)="OnSubmit()" #loginForm="ngForm">
-  <div [hidden]="!ref_email.pristine" id="email-pristine">RAS</div>
-  <div [hidden]="!ref_email.valid" id="email-valide">RAS</div>
-  <div [hidden]="ref_email.valid || ref_email.pristine" class="text-danger">
+
+  <!-- EMAIL FIELD -->
+  <!-- status informations of input -->
+  <div [ngStyle]="(!ref_email.valid && !ref_email.pristine)? {'color':'#dc3545'}:{'color': 'transparent'}">
     Email requis ou invalide
   </div>
   <div class="input-group input-group-sm mb-3 mx-auto">
@@ -10,9 +12,8 @@
       pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" [(ngModel)]="this.email" name="email" #ref_email="ngModel" />
   </div>
 
-  <div [hidden]="!ref_pwd.pristine" id="pwd-pristine">RAS</div>
-  <div [hidden]="!ref_pwd.valid" id="pwd-valide">RAS</div>
-  <div [hidden]="ref_pwd.valid || ref_pwd.pristine" class="text-danger">
+  <!-- PASSWORD FIELD -->
+  <div [ngStyle]="(!ref_pwd.valid && !ref_pwd.pristine)? {'color':'#dc3545'}:{'color': 'transparent'}">
     Mot de passe requis
   </div>
   <div class="input-group input-group-sm  mx-auto">
@@ -20,118 +21,64 @@
     <input type="password" class="form-control" id="pwd" aria-describedby="inputGroup-sizing-sm" required
       [(ngModel)]="this.password" name="pwd" #ref_pwd="ngModel" />
   </div>
+  <!-- Forgotten password link -->
+  <a class="d-flex justify-content-end fst-italic mt-1" data-bs-toggle="modal" data-bs-target="#askActivationCodeModal"
+    [ngStyle]="ref_email.valid ? {'text-decoration':'none','color':'white'}:{'color': 'transparent','pointer-events':'none'}">
+    Mot de passe perdu ?
+  </a>
 
-  <div>
-    <div data-bs-toggle="modal" data-bs-target="#myModal" class="d-flex justify-content-end fst-italic mt-1">
-      <a class="" [ngStyle]="ref_email.valid ? {'text-decoration':'none'}:{'color': 'transparent'}">Mot de passe perdu
-        ?</a>
-    </div>
-  </div>
-
-
-
-
-
-
-
-
+  <!-- Login button -->
   <div class="d-flex flex-grow-0 justify-content-center">
     <button type="submit" class="mt-2 btn btn-secondary ms-lg-auto border border-white"
       [disabled]="!loginForm.form.valid">
       Se connecter
     </button>
   </div>
+</form>
 
-  <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-body bg-success rounded">
+<!-- MODALE -->
+<div class="modal fade" id="askActivationCodeModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-body bg-success rounded">
+
+        <!-- Start content of modal -->
 
 
-          <form (ngSubmit)="OnSubmit()" #loginForm2="ngForm">
+        <form (ngSubmit)="OnSubmitChangePwdRequest()" #changePwdRequestForm="ngForm">
+          <div class="d-flex flex-column align-items-center">
+
+            <!-- 1- Display button for launch request -->
+            <button (click)="onAskingReceiveCode()" [hidden]="this.receivedActivationCode" type="button"
+              class="mt-2 btn btn-secondary border border-white">
+              Recevoir mon code de changement de mot de passe sur l'adresse <span
+                class="text-primary">{{this.email}}</span>
+            </button>
+
+            <!-- 2 - Input activation code -->
             <div class="d-flex flex-column align-items-center">
-              <div class="d-flex flex-column">
-                <button (click)="onAskingReceiveCode()" type="button" class="mt-2 btn btn-secondary border border-white"
-                  [hidden]="this.receivedActivationCode">
-                  Recevoir mon code de changement de mot de passe sur l'adresse <span
-                    class="text-primary">{{this.email}}</span>
-                </button>
+              <div class="input-group input-group-sm mb-3 mx-auto" [hidden]="!this.receivedActivationCode ">
+                Entrez le code d'activation (validité : 15 mn)
+                <span class="input-group-text" id="inputGroup-sizing-sm">Code d'activation</span>
+                <input type="text" class="form-control" id="activation" aria-describedby="inputGroup-sizing-sm" required
+                  pattern="[0-9]{6}$" [(ngModel)]="this.activationcode" name="activation" #code_activation="ngModel" />
               </div>
-              <div class="d-flex flex-column align-items-center">
-                <p [hidden]="!this.receivedActivationCode">Entrez le code d'activation reçu (validité 15 mn)</p>
-                <div [hidden]="!this.receivedActivationCode" class="input-group input-group-sm mb-3 mt-2">
-                  <span class="input-group-text" id="inputGroup-sizing-sm">Code</span>
-                  <div>
-                    <input type="text" class="form-control" [disabled]="!this.receivedActivationCode" id="activation"
-                      aria-describedby="inputGroup-sizing-sm" required pattern="[0-9]{6}$"
-                      [(ngModel)]="this.activationcode" name="activation" #code_activation="ngModel" />
-                  </div>
 
-                </div>
-                <div class="d-flex flex-grow-0 justify-content-center">
-                  <button type="submit" class="mt-2 btn btn-secondary ms-lg-auto border border-white"
-                    [disabled]="!loginForm2.form.valid" [hidden]="this.activation_success">
-                    Envoyer le code
-                  </button>
-                </div>
-              </div>
+              <button type="submit" class="mt-2 btn btn-secondary ms-lg-auto border border-white"
+                [disabled]="!code_activation.valid" [hidden]="this.activation_success">
+                Envoyer le code
+              </button>
+
             </div>
+          </div>
+
+        </form>
 
 
-          </form>
-        </div>
+        <!-- End content of modal -->
+
       </div>
     </div>
   </div>
-
-
-  <!-- <div [ngSwitch]="this.changePasswordResponseStatus" class="mt-4">
-    <div *ngSwitchCase="200" class="text-white">
-      Entrez SVP le code d'activation envoyé à l'adresse email fournie
-      <form (ngSubmit)="onSubmitActivation()" #registerFormActivation="ngForm">
-        <div [hidden]="!code_activation.pristine" class="is-hidden">RAS</div>
-        <div [hidden]="!code_activation.valid" class="is-hidden">RAS</div>
-        <div [hidden]="code_activation.valid || code_activation.pristine" class="text-danger">
-          Le code est doit être une suite de 6 digits
-        </div>
-        <div class="input-group input-group-sm mb-3 mx-auto">
-          <span class="input-group-text" id="inputGroup-sizing-sm">Code d'activation</span>
-          <input
-            type="text"
-            class="form-control"
-            id="activation"
-            aria-describedby="inputGroup-sizing-sm"
-            required
-            pattern="[0-9]{6}$"
-            [(ngModel)]="this.activationcode"
-            name="activation"
-            #code_activation="ngModel"
-          />
-        </div>
-        <div class="d-flex flex-grow-0 justify-content-center">
-          <button
-            type="submit"
-            class="mt-2 btn btn-secondary ms-lg-auto border border-white"
-            [disabled]="!registerFormActivation.form.valid"
-            [hidden]="this.activation_success"
-          >
-            Envoyer le code
-          </button>
-        </div>
-        <div [ngSwitch]="this.activationResponseStatus" class="mt-4">
-          <div *ngSwitchCase="200" class="text-white"> activation OK</div>
-          <div *ngSwitchDefault class="text-danger">
-            <strong>{{ this.activationResponseMsgToDisplay }}</strong>
-          </div>
-        </div>
-      </form>
-      
-    </div>
-    <div *ngSwitchDefault class="text-danger">
-      <strong>{{ this.registerResponseMsgToDisplay }}</strong>
-    </div>
-  </div> -->
-  <div *ngIf="this.statusAfterRequest !== 200" class="mt-4 text-danger">
-    {{ this.msgAfterRequest }}
-  </div>
-</form>
+</div>
