--- a/src/app/public-module/login-form/login-form.component.html
+++ b/src/app/public-module/login-form/login-form.component.html
@@ -45,35 +45,76 @@
 
         <!-- Start content of modal -->
 
-
+        <!-- Integrated second form in modal -->
         <form (ngSubmit)="OnSubmitChangePwdRequest()" #changePwdRequestForm="ngForm">
+
+          <!-- Input fiels agencement -->
           <div class="d-flex flex-column align-items-center">
 
-            <!-- 1- Display button for launch request -->
-            <button (click)="onAskingReceiveCode()" [hidden]="this.receivedActivationCode" type="button"
-              class="mt-2 btn btn-secondary border border-white">
+            <!-- Send authentication code -->
+            <button (click)="onAskingReceiveCode()" type="button" class="mt-2 btn btn-secondary border border-white">
               Recevoir mon code de changement de mot de passe sur l'adresse <span
                 class="text-primary">{{this.email}}</span>
             </button>
 
             <!-- 2 - Input activation code -->
-            <div class="d-flex flex-column align-items-center">
-              <div class="input-group input-group-sm mb-3 mx-auto" [hidden]="!this.receivedActivationCode ">
-                Entrez le code d'activation (validité : 15 mn)
+            <div class="d-flex flex-column border border-danger">
+              <p>Saisie du code d'activation envoyé à l'adresse
+                <strong>{{this.email}}</strong>
+              </p>
+              <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
                 <span class="input-group-text" id="inputGroup-sizing-sm">Code d'activation</span>
                 <input type="text" class="form-control" id="activation" aria-describedby="inputGroup-sizing-sm" required
-                  pattern="[0-9]{6}$" [(ngModel)]="this.activationcode" name="activation" #code_activation="ngModel" />
+                  pattern="[0-9]{6}$" [(ngModel)]="this.activationcode" name="activation" #code_activation="ngModel"
+                  placeholder="Entrez le code (validité 15mn)" />
               </div>
-
-              <button type="submit" class="mt-2 btn btn-secondary ms-lg-auto border border-white"
-                [disabled]="!code_activation.valid" [hidden]="this.activation_success">
+              <button (click)="onSendActivationCode()" type="button" class="mt-2 btn btn-secondary border border-white"
+                [disabled]="!code_activation.valid">
                 Envoyer le code
               </button>
-
             </div>
+
+
+            <!-- Input new password -->
+            <div class="d-flex flex-column border border-danger">
+              <p>Entrée du nouveau mot de passe</p>
+              <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
+                <span class="input-group-text" id="inputGroup-sizing-sm">Mot de passe</span>
+                <input type="password" class="form-control" id="newPwdId" aria-describedby="inputGroup-sizing-sm"
+                  required pattern="[a-zA-Z0-9!@#$%^&*_=+-]{8,12}" [(ngModel)]="this.newPassword" name="newPwdField"
+                  #new_pwd_model="ngModel" placeholder="Nouveau mot de passe" />
+              </div>
+
+              <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
+                <span class="input-group-text" id="inputGroup-sizing-sm">Confirmation</span>
+                <input type="password" class="form-control" id="confirmPwdId" aria-describedby="inputGroup-sizing-sm"
+                  required pattern="[a-zA-Z0-9!@#$%^&*_=+-]{8,12}" [(ngModel)]="this.confirmedPassword"
+                  name="confirmedPwdField" #confirmed_pwd_model="ngModel" placeholder="Confirmez le mot de passe"
+                  [disabled]="!new_pwd_model.valid" />
+              </div>
+            <button   (click)="onSendActivationCode()" type="button" class="mt-2 btn btn-secondary border border-white"
+                [disabled] ="this.newPassword !== this.confirmedPassword || !this.newPassword">
+                Enregistrer
+              </button>
+            </div>
+
+
+
+
+
+
+
+            <div class="d-flex flex-grow-0 justify-content-center">
+              <button type="button" class="mt-2 btn btn-secondary ms-lg-auto border border-white">
+                Continuer
+              </button>
+            </div>
+
           </div>
 
         </form>
+
+
 
 
         <!-- End content of modal -->
