--- a/src/app/public-module/shared-public-module/send-auth-code-and-act/send-auth-code-and-act.component.html
+++ b/src/app/public-module/shared-public-module/send-auth-code-and-act/send-auth-code-and-act.component.html
@@ -1,71 +1,77 @@
-<form (ngSubmit)="OnSubmitChangePwdRequest()" #changePwdRequestForm="ngForm">
+<form #changePwdRequestForm="ngForm">
+  <!-- Input fielss agencement -->
+  <div class="d-flex flex-column align-items-center">
+    
+    <div [ngSwitch]="this.engineStepService.getCurrentStep()">
 
-    <!-- Input fiels agencement -->
-    <div class="d-flex flex-column align-items-center">
-      <div [ngSwitch]="this.engineStepService.getCurrentStep()">
+      <!-- Nota bene : It seems not possible to use enum literals on template -->
+      
+      <!-- Case REQUEST_AUTH_CODE -->
+      <div *ngSwitchCase=1>
+        <!-- Send authentication code -->
+        <button (click)="onAskingReceiveCode()" type="button" class="mt-2 btn btn-secondary border border-white">
+          Recevoir mon code de changement de mot de passe sur l'adresse <span
+            class="text-primary">{{this.emailWhereCodeSended}}</span>
+        </button>
+      </div>
 
-        <div *ngSwitchCase=1>
-          <!-- Send authentication code -->
-          <button (click)="onAskingReceiveCode()" type="button"
-            class="mt-2 btn btn-secondary border border-white">
-            Recevoir mon code de changement de mot de passe sur l'adresse <span
-              class="text-primary">{{this.emailWhereCodeSended}}</span>
+      <!-- Case SEND_AUTH_CODE -->
+      <div *ngSwitchCase=2>
+        <!-- 2 - Input activation code -->
+        <div class="d-flex flex-column">
+          <p>Veuillez saisir la code envoyé à l'adresse
+            <strong>{{this.emailWhereCodeSended}}</strong>
+          </p>
+          <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
+            <span class="input-group-text" id="inputGroup-sizing-sm">Code d'activation</span>
+            <input type="text" class="form-control" id="activation" aria-describedby="inputGroup-sizing-sm" required
+              pattern="[0-9]{6}$" [(ngModel)]="this.activationcode" name="activation" #code_activation="ngModel"
+              placeholder="Entrez le code (validité 15mn)" />
+          </div>
+          <button (click)="onSendActivationCode()" type="button" class="mt-2 btn btn-secondary border border-white"
+            [disabled]="!code_activation.valid">
+            Envoyer le code
           </button>
         </div>
-
-        <div *ngSwitchCase=2>
-          <!-- 2 - Input activation code -->
-          <div class="d-flex flex-column">
-            <p>Veuillez saisir la code envoyé à l'adresse
-              <strong>{{this.emailWhereCodeSended}}</strong>
-            </p>
-            <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
-              <span class="input-group-text" id="inputGroup-sizing-sm">Code d'activation</span>
-              <input type="text" class="form-control" id="activation" aria-describedby="inputGroup-sizing-sm"
-                required pattern="[0-9]{6}$" [(ngModel)]="this.activationcode" name="activation"
-                #code_activation="ngModel" placeholder="Entrez le code (validité 15mn)" />
-            </div>
-            <button (click)="onSendActivationCode()" type="button"
-              class="mt-2 btn btn-secondary border border-white" [disabled]="!code_activation.valid">
-              Envoyer le code
-            </button>
-          </div>
-        </div>
-
-        <div *ngSwitchCase=3>
-          <!-- 3 - Input new password -->
-          <div class="d-flex flex-column">
-            <p>Veuillez entrer votre nouveau mot de passe</p>
-            <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
-              <span class="input-group-text" id="inputGroup-sizing-sm">Mot de passe</span>
-              <input type="password" class="form-control" id="newPwdId" aria-describedby="inputGroup-sizing-sm"
-                required pattern="[a-zA-Z0-9!@#$%^&*_=+-]{8,12}" [(ngModel)]="this.newPassword" name="newPwdField"
-                #new_pwd_model="ngModel" placeholder="Nouveau mot de passe" />
-            </div>
-
-            <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
-              <span class="input-group-text" id="inputGroup-sizing-sm">Confirmation</span>
-              <input type="password" class="form-control" id="confirmPwdId"
-                aria-describedby="inputGroup-sizing-sm" required pattern="[a-zA-Z0-9!@#$%^&*_=+-]{8,12}"
-                [(ngModel)]="this.confirmedPassword" name="confirmedPwdField" #confirmed_pwd_model="ngModel"
-                placeholder="Confirmez le mot de passe" [disabled]="!new_pwd_model.valid" />
-            </div>
-            <button (click)="onSendNewPassword()" type="button" class="mt-2 btn btn-secondary border border-white"
-              [disabled]="this.newPassword !== this.confirmedPassword || !this.newPassword">
-              Enregistrer
-            </button>
-          </div>
-        </div>
-
-        <div *ngSwitchCase=4>
-          <!-- 4 - Comment on operation result -->
-          <div class="d-flex justify-content-center">
-            <p>Modification du nouveau mot de passe effectuée.</p>
-          </div>
-        </div>
-
-        <div *ngSwitchCase=23>TOTO</div>
-        <div *ngSwitchDefault>ERROR</div>
       </div>
+
+       <!-- Case SEND_NEW_PASSWORD -->
+      <div *ngSwitchCase=3>
+        <!-- 3 - Input new password -->
+        <div class="d-flex flex-column">
+          <p>Veuillez entrer votre nouveau mot de passe</p>
+          <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
+            <span class="input-group-text" id="inputGroup-sizing-sm">Mot de passe</span>
+            <input type="password" class="form-control" id="newPwdId" aria-describedby="inputGroup-sizing-sm" required
+              pattern="[a-zA-Z0-9!@#$%^&*_=+-]{8,12}" [(ngModel)]="this.newPassword" name="newPwdField"
+              #new_pwd_model="ngModel" placeholder="Nouveau mot de passe" />
+          </div>
+
+          <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
+            <span class="input-group-text" id="inputGroup-sizing-sm">Confirmation</span>
+            <input type="password" class="form-control" id="confirmPwdId" aria-describedby="inputGroup-sizing-sm"
+              required pattern="[a-zA-Z0-9!@#$%^&*_=+-]{8,12}" [(ngModel)]="this.confirmedPassword"
+              name="confirmedPwdField" #confirmed_pwd_model="ngModel" placeholder="Confirmez le mot de passe"
+              [disabled]="!new_pwd_model.valid" />
+          </div>
+          <button (click)="onSendNewPassword()" type="button" class="mt-2 btn btn-secondary border border-white"
+            [disabled]="this.newPassword !== this.confirmedPassword || !this.newPassword">
+            Enregistrer
+          </button>
+        </div>
+      </div>
+
+      <!-- Case OPERATION_RESULT_STATUS -->
+      <div *ngSwitchCase=4>
+        <!-- 4 - Comment on operation result -->
+        <div class="d-flex justify-content-center">
+          <p>Modification du nouveau mot de passe effectuée.</p>
+        </div>
+      </div>
+
+      <!-- Default case -->
+      <div *ngSwitchDefault>Step anomaly : {{this.engineStepService.getCurrentStep()}}</div>
+    
     </div>
-  </form>
+  </div>
+</form>
