Change password functionnalities run Ok

--- a/src/app/public-module/shared-public-module/send-auth-code-and-act/send-auth-code-and-act.component.html
+++ b/src/app/public-module/shared-public-module/send-auth-code-and-act/send-auth-code-and-act.component.html
@@ -9,51 +9,47 @@
       <!-- Case REQUEST_AUTH_CODE -->
       <div *ngSwitchCase=1>
         <!-- Send authentication code -->
+        <h3 class="mb-3">Demande d'authentification</h3>
+        <p style="font-size: smaller;">Nous devons nous assurez que vous êtes celui que vous prétendez.<br>
+        En cliquant sur le bouton ci-dessous, vous allez recevoir sur votre adresse mail un code qui vous permettra de réinitialiser votre mot de passe
+        </p>
         <button (click)="onAskingReceiveCode()" type="button" class="mt-2 btn btn-secondary border border-white">
           Recevoir mon code de changement de mot de passe sur l'adresse <span
             class="text-primary">{{this.emailWhereCodeSended}}</span>
         </button>
       </div>
 
-      <!-- Case SEND_AUTH_CODE -->
-      <div *ngSwitchCase=2>
-        <!-- 2 - Input activation code -->
-        <div class="d-flex flex-column">
-          <p>Veuillez saisir la code envoyé à l'adresse
-            <strong>{{this.emailWhereCodeSended}}</strong>
-          </p>
-          <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
-            <span class="input-group-text" id="inputGroup-sizing-sm">Code d'activation</span>
-            <input type="text" class="form-control" id="activation" aria-describedby="inputGroup-sizing-sm" required
-              pattern="[0-9]{6}$" [(ngModel)]="this.activationcode" name="activation" #code_activation="ngModel"
-              placeholder="Entrez le code (validité 15mn)" />
-          </div>
-          <button (click)="onSendActivationCode()" type="button" class="mt-2 btn btn-secondary border border-white"
-            [disabled]="!code_activation.valid">
-            Envoyer le code
-          </button>
-        </div>
-      </div>
+      
 
        <!-- Case SEND_NEW_PASSWORD -->
       <div *ngSwitchCase=3>
         <!-- 3 - Input new password -->
         <div class="d-flex flex-column">
-          <p>Veuillez entrer votre nouveau mot de passe</p>
+          <h3 class="mb-3">Saisie du nouveau mot de passe</h3>
+          <p style="font-size: smaller;">Nb : le code d'authentification vient d'être envoyé à l'adresse
+            <strong>{{this.emailWhereCodeSended}}</strong>
+          </p>
+          <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
+            <span class="input-group-text" id="inputGroup-sizing-sm">Code d'authentification</span>
+            <input type="text" class="form-control" id="activation" aria-describedby="inputGroup-sizing-sm" required
+              pattern="[0-9]{6}$" [(ngModel)]="this.activationcode" name="activation" #code_activation="ngModel"
+              placeholder="Entrez le code (validité 15mn)" />
+          </div>
           <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
             <span class="input-group-text" id="inputGroup-sizing-sm">Mot de passe</span>
             <input type="password" class="form-control" id="newPwdId" aria-describedby="inputGroup-sizing-sm" required
               pattern="[a-zA-Z0-9!@#$%^&*_=+-]{8,12}" [(ngModel)]="this.newPassword" name="newPwdField"
-              #new_pwd_model="ngModel" placeholder="Nouveau mot de passe" />
+              #new_pwd_model="ngModel" placeholder="Entrez votre nouveau mot de passe" />
           </div>
 
           <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
             <span class="input-group-text" id="inputGroup-sizing-sm">Confirmation</span>
             <input type="password" class="form-control" id="confirmPwdId" aria-describedby="inputGroup-sizing-sm"
               required pattern="[a-zA-Z0-9!@#$%^&*_=+-]{8,12}" [(ngModel)]="this.confirmedPassword"
-              name="confirmedPwdField" #confirmed_pwd_model="ngModel" placeholder="Confirmez le mot de passe"
+              name="confirmedPwdField" #confirmed_pwd_model="ngModel" placeholder="Confirmez le nouveau mot de passe"
               [disabled]="!new_pwd_model.valid" />
           </div>
+          <p [ngClass]="!this.newPasswordResponseStatus ? 'text-danger':'text-white'" >{{this.newPasswordResponseMsgToDisplay}}</p>
           <button (click)="onSendNewPassword()" type="button" class="mt-2 btn btn-secondary border border-white"
             [disabled]="this.newPassword !== this.confirmedPassword || !this.newPassword">
             Enregistrer
@@ -65,7 +61,7 @@
       <div *ngSwitchCase=4>
         <!-- 4 - Comment on operation result -->
         <div class="d-flex justify-content-center">
-          <p>Modification du nouveau mot de passe effectuée.</p>
+          <p>{{this.newPasswordResponseMsgToDisplay}}</p>
         </div>
       </div>
 
